# llvm-simd-intrinsic-hoisting

./: CMakeLists.txt  Intrinsic-Count.md  IntrinsicHoisting.cpp  NOTES.md  Write-Up.md  final report.md
IntrinsicHoister/: CMakeLists.txt  IntrinsicHoisting.cpp
["test"]/: fmadd.c
test/: avg.c  avg.ll  avg.s  avg_original.ll  avg_original.s  cmp.c  cmplt_pd.c  cmplt_pd.ll  cmplt_pd.s  cmplt_pd_original.ll  cmplt_pd_original.s  fmadd.c  madd.c  madd.ll  madd.s  madd_original.ll  madd_original.s  make_all.sh  min.c  min.dag1.combine1.dot  min.dag2.legalize.dot  min.dag3.combine2.dot  min.dag4.isel.dot  min.dag5.sched.dot  min.ll  min.s  min.sunit.dag.dot  min_original.ll  min_original.s  movmask.c  movmask.ll  movmask.s  movmask_original.ll  movmask_original.s  pack.c  pack.ll  pack.s  pack_original.ll  pack_original.s  pmul.c  (+20 more)
